Fixes h1 displays on blog posts on smaller screens

--- a/app/_scss/sections/_news.scss
+++ b/app/_scss/sections/_news.scss
@@ -185,10 +185,6 @@
 		.widgets ul.social-links {
 			display: none;
 		}
-
-		h1 {
-			width: 97%;
-		}
 	}
 }
 
@@ -211,10 +207,6 @@
 				margin-left: 0;
 				margin-top: 1.6em;
 			}
-		}
-
-		h1 {
-			width: 95%;
 		}
 	}
 }
